--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,6 +142,7 @@ sup {
     flex-direction: column;
     height: inherit;
     justify-content: space-evenly;
+    min-height: 400px;
 
     &--final {
       height: 75%;
@@ -459,10 +460,8 @@ sup {
   margin: 30px auto 0;
 
   &__image {
-    transform: translateY(200%);
     max-width: 80%;
-    display: block;
-    transform: translateY(200%);
+    transform: translateY(350%);
     animation: 0.5s ease-in 0.2s forwards animate-from-bottom;
     margin: 0 auto;
   }
@@ -624,10 +623,14 @@ sup {
 @keyframes animate-from-bottom {
   from {
     transform: translateY(200%);
+    visibility: hidden;
+    display: none;
   }
 
   to {
     transform: translateY(0%);
+    visibility: visible;
+    display: block;
   }
 }
 
@@ -908,6 +911,10 @@ input[type="radio"]:checked ~ .card__button::after {
   .form-view {
     height: auto;
     min-height: 400px;
+
+    &__sub-title {
+      font-size: 14px;
+    }
   }
 
   .card {
@@ -917,7 +924,7 @@ input[type="radio"]:checked ~ .card__button::after {
 
     &--central {
       width: 70%;
-      height: 200px;
+      min-height: 250px;
     }
 
     &__button {
@@ -947,5 +954,148 @@ input[type="radio"]:checked ~ .card__button::after {
 
   .form-view__summary-subtitle {
     font-size: 12px;
+  }
+
+  .form-view__answer {
+    width: 50%;
+    margin: 10px;
+  }
+
+  .header {
+    width: 90%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .heading {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .form-view__greetings-box {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  .form-view__summary {
+    width: 75%;
+  }
+
+  .card--final {
+    width: 25%;
+    height: 150px;
+    top: 27%;
+    right: 2%;
+  }
+
+  .card__image--final {
+    width: 102px;
+  }
+
+  .card--small {
+    width: 25%;
+    height: 160px;
+    top: 62%;
+  }
+
+  .card__title {
+    font-size: 12px;
+  }
+
+  .cta__question-mark {
+    height: 50px;
+    width: 50px;
+    margin-right: 0;
+    order: 2;
+    transform: translateX(150%);
+  }
+
+  .cta-container {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    height: 15vh;
+  }
+
+  .cta__again {
+    order: 3;
+  }
+
+  .cta__back,
+  .cta__next,
+  .cta__again {
+    width: 45%;
+  }
+}
+
+@media only screen and (max-width: 620px) {
+  .form-view__input {
+    width: 75%;
+  }
+
+  .form-view__answers {
+    flex-direction: column;
+  }
+
+  .form-view__answer {
+    width: 65%;
+  }
+}
+
+@media only screen and (max-width: 535px) {
+  .cta__back,
+  .cta__next,
+  .cta__again {
+    width: 40%;
+  }
+
+  .logo-box__img {
+    max-width: 75%;
+  }
+
+  .form-view__greetings-box {
+    width: 80%;
+  }
+
+  .logo-box {
+    width: 50%;
+    text-align: center;
+  }
+
+  .heading {
+    font-size: 18px;
+  }
+
+  .card__image--final {
+    width: 90px;
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  .form-view__text {
+    font-size: 14px;
+  }
+
+  .form-view__greetings-text {
+    font-size: 10px;
+  }
+
+  .answer-text {
+    font-size: 12px;
+  }
+
+  .card__image--final {
+    width: 70px;
+  }
+
+  .cta__download {
+    width: 100px;
+  }
+
+  .form-view__input {
+    width: 85%;
   }
 }
