Fix problem with overflow on image

--- a/css/style.css
+++ b/css/style.css
@@ -87,19 +87,19 @@ sup {
 
 .form-view {
   border-radius: 5px;
-  height: 600px;
   padding-bottom: 30px;
   margin: 50px auto 0;
   position: relative;
   background: rgba(255, 255, 255, 0.85);
   display: none;
-  box-shadow: 0 0 10px #b9b9b9; }
+  box-shadow: 0 0 10px #b9b9b9;
+  min-height: 500px; }
   .form-view__title {
     font-size: 24px;
     margin-bottom: 20px;
     padding-top: 20px;
     text-align: center;
-    margin: 0 auto;
+    margin: 0 auto 30px;
     width: 80%; }
     .form-view__title--final {
       color: white; }
@@ -110,7 +110,6 @@ sup {
     display: flex;
     flex-direction: column;
     height: inherit;
-    justify-content: space-evenly;
     min-height: 400px; }
     .form-view__question--final {
       height: 75%;
@@ -340,7 +339,11 @@ sup {
 
 .image-box {
   width: 40%;
-  margin: 30px auto 0; }
+  margin: 30px auto 0;
+  overflow-y: hidden;
+  position: absolute;
+  right: 20%;
+  bottom: 0; }
   .image-box__image {
     max-width: 80%;
     transform: translateY(350%);
@@ -750,6 +753,4 @@ input[type="radio"]:checked ~ .card__button::after {
   .card__image--final {
     width: 70px; }
   .cta__download {
-    width: 100px; }
-  .form-view__input {
-    width: 85%; } }
+    width: 100px; } }
