--- a/scss/style.scss
+++ b/scss/style.scss
@@ -118,7 +118,6 @@ sup {
   position: relative;
   background: rgba(255, 255, 255, 0.85);
   display: none;
-  justify-content: space-evenly;
   box-shadow: 0 0 10px #b9b9b9;
   min-height: 500px;
 
@@ -141,6 +140,7 @@ sup {
     text-align: center;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     height: inherit;
     min-height: 400px;
 
@@ -149,6 +149,11 @@ sup {
       justify-content: flex-start;
       background-color: $basic-blue-color;
       clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
+    }
+
+    &-2--male,
+    &-2--female {
+      justify-content: flex-start;
     }
   }
 
@@ -364,7 +369,7 @@ sup {
   &--final {
     position: absolute;
     top: 20%;
-    right: 15%;
+    right: 12%;
     background-color: white;
     justify-content: flex-start;
     border: 3px solid $base-grey-color;
@@ -375,7 +380,7 @@ sup {
     width: 200px;
     position: absolute;
     top: 28%;
-    right: 1%;
+    right: -2%;
     background-color: white;
     justify-content: flex-start;
     border: 3px solid $base-grey-color;
@@ -463,7 +468,7 @@ sup {
   right: 20%;
   bottom: 0;
   &__image {
-    max-width: 80%;
+    max-width: 70%;
     transform: translateY(350%);
     animation: 0.5s ease-in 0.2s forwards animate-from-bottom;
     margin: 0 auto;
@@ -670,6 +675,38 @@ input[type="radio"]:checked ~ .card__button::after {
   background-color: $basic-blue-color;
 }
 
+// @media only screen and (min-width: 1750px) {
+//   @keyframes animate-width {
+//     from {
+//       width: 0;
+//     }
+
+//     to {
+//       width: 75px;
+//     }
+//   }
+
+//   .step-line__dot--active:not(:first-of-type)::before {
+//     left: -75px;
+//   }
+// }
+
+@media only screen and (min-width: 1700px) {
+  @keyframes animate-width {
+    from {
+      width: 0;
+    }
+
+    to {
+      width: 35px;
+    }
+  }
+
+  .step-line__dot--active:not(:first-of-type)::before {
+    left: -35px;
+  }
+}
+
 @media only screen and (min-width: 1500px) {
   .container {
     width: 60vw;
@@ -729,6 +766,10 @@ input[type="radio"]:checked ~ .card__button::after {
 
   .step-line__dot--active:not(:first-of-type)::before {
     left: -20px;
+  }
+
+  .image-box__image {
+    max-width: 80%;
   }
 }
 
@@ -796,6 +837,10 @@ input[type="radio"]:checked ~ .card__button::after {
     transform: translateY(-40px) translateX(30px);
     width: 150px;
   }
+
+  .image-box__image {
+    max-width: 90%;
+  }
 }
 
 @media only screen and (max-width: 880px) {
@@ -819,6 +864,10 @@ input[type="radio"]:checked ~ .card__button::after {
 
   .card__image--final {
     width: 160px;
+  }
+
+  .image-box__image {
+    max-width: 100%;
   }
 }
 
@@ -897,6 +946,10 @@ input[type="radio"]:checked ~ .card__button::after {
   .form-view__answers--multiple {
     height: 300px;
     width: 85%;
+  }
+
+  .image-box {
+    width: 45%;
   }
 }
 
@@ -1046,6 +1099,10 @@ input[type="radio"]:checked ~ .card__button::after {
   .form-view__answer {
     width: 65%;
   }
+
+  .image-box {
+    width: 50%;
+  }
 }
 
 @media only screen and (max-width: 535px) {
@@ -1074,6 +1131,10 @@ input[type="radio"]:checked ~ .card__button::after {
 
   .card__image--final {
     width: 90px;
+  }
+
+  .image-box {
+    width: 60%;
   }
 }
 
