Try to resolve problem with mobile browsers

--- a/css/prefix.css
+++ b/css/prefix.css
@@ -657,7 +657,8 @@ input[type="radio" i] {
   -webkit-transition: border 0.2s ease-in;
   -o-transition: border 0.2s ease-in;
   transition: border 0.2s ease-in;
-  z-index: 5; }
+  z-index: 5;
+  background-color: transparent; }
 
 input:checked {
   border: 2px solid #097aff; }
