--- a/scss/style.scss
+++ b/scss/style.scss
@@ -222,7 +222,7 @@ sup {
       top: 50%;
       transform: translateY(-50%) translateX(150%);
 
-      & > img {
+      &>img {
         animation: 1s ease-in 0.2s forwards animate-from-right;
       }
     }
@@ -232,7 +232,7 @@ sup {
       top: 50%;
       transform: translateY(-50%) translateX(-150%);
 
-      & > img {
+      &>img {
         animation: 1s ease-in 0.2s forwards animate-from-left;
       }
     }
@@ -256,7 +256,7 @@ sup {
       width: 80%;
       height: 250px;
 
-      & > .form-view__answer {
+      &>.form-view__answer {
         justify-content: flex-start;
         align-items: center;
       }
@@ -467,6 +467,7 @@ sup {
   position: absolute;
   right: 20%;
   bottom: 0;
+
   &__image {
     max-width: 70%;
     transform: translateY(350%);
@@ -657,21 +658,22 @@ input[type="radio"i] {
   border-radius: 5px;
   transition: border 0.2s ease-in;
   z-index: 5;
+  background-color: transparent;
 }
 
 input:checked {
   border: 2px solid $basic-blue-color;
 }
 
-input[type="radio"]:checked ~ .step-line__dot {
+input[type="radio"]:checked~.step-line__dot {
   background-color: $basic-blue-color;
 }
 
-input[type="radio"]:checked ~ .form-view__circle .form-view__active-circle {
+input[type="radio"]:checked~.form-view__circle .form-view__active-circle {
   background-color: $basic-blue-color;
 }
 
-input[type="radio"]:checked ~ .card__button::after {
+input[type="radio"]:checked~.card__button::after {
   background-color: $basic-blue-color;
 }
 
@@ -717,6 +719,7 @@ input[type="radio"]:checked ~ .card__button::after {
   .container {
     width: 75vw;
   }
+
   .card--final {
     right: 20%;
     width: 25%;
@@ -777,6 +780,7 @@ input[type="radio"]:checked ~ .card__button::after {
   .form-view__summary-title {
     font-size: 24px;
   }
+
   .logo-box__img {
     max-width: 90%;
   }
@@ -913,6 +917,7 @@ input[type="radio"]:checked ~ .card__button::after {
     }
   }
 }
+
 @media only screen and (max-width: 760px) {
   .step-line {
     display: none;
@@ -1106,6 +1111,7 @@ input[type="radio"]:checked ~ .card__button::after {
 }
 
 @media only screen and (max-width: 535px) {
+
   .cta__back,
   .cta__next,
   .cta__again {
